Add exception handling to Farm21 integration services
Added try-catch blocks in Farm21SensorDataIntegrationService and Farm21SensorIntegrationService to better handle potential runtime exceptions. This change was necessary to prevent potential system crashes due to unhandled exceptions when fetching data from the Farm21 API, thus improving the robustness of the system. Also, added a new error code "FARM21_COULD_NOT_FETCH_DEVICE_DATA" to handle fetching device data errors.